--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main class="mdl-layout__content">
       <div class="right-image">
-        <img src="./images/fahrenheit_to_celsius_c18.png" alt="fahrenheit image" />
+        <img src="./images/positive_negative.jpg" alt="Positive and negative image" />
       </div>
       <br />
       <div class="page-content">Pick an integer between 1 and 6.</div>
