--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       <br />
       <div class="page-content">Select Positive or Negative</div>
       <form action="#">
-        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-1">
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-positive">
           <input type="radio" id="option-1" class="mdl-radio__button" name="options" value="1" checked>
           <span class="mdl-radio__label">First</span>
         </label>
-        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-2">
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-negative">
           <input type="radio" id="option-2" class="mdl-radio__button" name="options" value="2">
           <span class="mdl-radio__label">Second</span>
         </label>
