--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
       <form action="#">
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-positive">
           <input type="radio" id="option-1" class="mdl-radio__button" name="options" value="1" checked>
-          <span class="mdl-radio__label">First</span>
+          <span class="mdl-radio__label">Positive</span>
         </label>
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-negative">
           <input type="radio" id="option-2" class="mdl-radio__button" name="options" value="2">
-          <span class="mdl-radio__label">Second</span>
+          <span class="mdl-radio__label">Negative</span>
         </label>
         <br />
         <!-- Accent-colored raised button with ripple -->
